Fix mobile banner overflow and adjust hero responsiveness

--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@
     .profile-pic {
       width: 90px;
       height: 90px;
-      margin-top: 200px;
+      margin-top: 0px;
       margin-left: 15px;
     }
   }
